--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -77,3 +77,14 @@ $headingColour: #053259 !default;
 
 }
 
+.email{
+text-align: center;
+font-size: 17px;
+text-decoration: none !important;
+color: #0d6efd;
+
+}
+
+.logo img {
+    max-height: 4.5rem;
+}
