--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -64,7 +64,7 @@ $headingColour: #053259 !default;
 		  font-size: 18px;
 		  width: 65%;
 		  float: right;
-		  text-align: justify;
+		  text-align: left;
 		  display: inline-block;
 		}
 		#bio_img{
